Prevent flickering on chrome

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -18,7 +18,7 @@ body {
 header {
 	max-width: 70em;
 	margin: 0 auto;
-	@include clearfix();	
+	@include clearfix();
 	clear:both;
 }
 
@@ -36,7 +36,7 @@ header {
 	border: 1px solid #CCC;
 	padding: 1em 0;
 	@include clearfix();
-	
+
 }
 
 #title, #download {
@@ -53,11 +53,11 @@ section, #title, #download{
 	border-top: 1px solid #CCC;
 	@include box-shadow(inset 0px 5px 7px -3px #CCC);
 	//@include background-image(linear-gradient(#EEE, #FFF 30%));
-	
+
 	width: 100%;
 	clear: both;
 	@include clearfix();
-	
+
 	h2 {
 		padding: 0em 1.5em 0 1.5em;
 		padding-top: 1.5em;
@@ -74,15 +74,15 @@ section, #title, #download{
 	#example1, #example2 {
 		@include column(6);
 	}
-	
+
 	#how h2, #examples #h2 {
 		@include column(12);
 	}
-	
+
 	#how-js {
 		clear: left;
 	}
-	
+
 	#download {
 		padding-top: 5em;
 	}
@@ -104,7 +104,9 @@ nav {
 	width: 100%;
 	background: #333;
 	line-height: 2.5em;
-	
+
+  // prevent flickering on Chrome
+  @include translateZ(0);
 
 	#nav-wrapper {
 		background: #333;
@@ -112,7 +114,7 @@ nav {
 		margin: 0 auto;
 		display: block;
 	}
-	
+
 	#brand {
 		float: right;
 		margin-right: 1.5em;
@@ -121,23 +123,23 @@ nav {
 	#nav {
 		margin-left: 1.5em;
 	}
-	
+
 	ul, li {
 		display: inline-block;
 		zoom: 1;
         *display: inline;
 	}
-	
+
 	ul, li {
 		margin: 0;
 	}
-	
+
 	ul ul {
 		background: #222;
 		@include box-shadow(inset 5px 0px 5px -2px #000, inset -5px 0px 5px -2px #000);
 		padding: 0 1em;
 	}
-	
+
 	a {
 		display: inline-block;
 		zoom: 1;
@@ -170,22 +172,22 @@ body {
 h1 {
 	font-size: 2em;
 	text-align: center;
-	
+
 	@media screen and (min-width: 15em){
 		font-size: 2.5em;
 	}
-		
+
 	@media screen and (min-width: 20em){
 		font-size: 3.5em;
 	}
-	
+
 	@media screen and (min-width: 35em){
 		font-size: 5em;
 	}
 }
 
 h1, #brand {
-	font-family: 'Leckerli One', cursive;	
+	font-family: 'Leckerli One', cursive;
 	font-weight: normal;
 }
 
@@ -229,7 +231,7 @@ ul.plain {
 }
 
 ul code {
-color: #D14; 
+color: #D14;
 }
 
 li {
